--- a/scss/responsive.scss
+++ b/scss/responsive.scss
@@ -152,18 +152,6 @@
     }
 }
    
-    #footer {
-        padding-bottom: 5rem;
-    }
-
-    #footer_content {
-        text-align: left;
-    }
-
-    #menu-footer {
-        align-items: inherit !important;
-    }
-
     .rs_link_wrapper {
         width: 80%;
         display: flex;
